# life-the-game

./: CMakeLists.txt  dependencies.h  field.cpp  field.h  main.cpp  master.cpp  master.h  worker.cpp  worker.h
